[gd_scene load_steps=14 format=3 uid="uid://r20l7yuf6lky"]

[ext_resource type="Texture2D" uid="uid://8q7nbkqw517i" path="res://assets/ui/PlanetButton.png" id="1_ey4xq"]
[ext_resource type="Script" path="res://scenes/ui/PlanetButton.gd" id="2_hmqgj"]
[ext_resource type="Texture2D" uid="uid://rxrgbsr1cqik" path="res://assets/sprites/particle.png" id="3_l1qtp"]
[ext_resource type="AudioStream" uid="uid://c4aqrifs4tlo0" path="res://assets/audio/hover.wav" id="4_ig1ms"]

[sub_resource type="LabelSettings" id="LabelSettings_8b8p6"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_gi2hc"]
offsets = PackedFloat32Array(0, 0.653509)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3nfe5"]
gradient = SubResource("Gradient_gi2hc")
width = 32
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j6mg4"]
gradient = SubResource("Gradient_gi2hc")
width = 96
height = 96
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Curve" id="Curve_u0jgt"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.379464, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_4snmd"]
curve = SubResource("Curve_u0jgt")

[sub_resource type="Curve" id="Curve_vexig"]
_data = [Vector2(0.348214, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_22o4m"]
curve = SubResource("Curve_vexig")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0pans"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 13.572
initial_velocity_min = 206.35
initial_velocity_max = 206.35
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_22o4m")
scale_over_velocity_max = 95.24
alpha_curve = SubResource("CurveTexture_4snmd")
turbulence_enabled = true
turbulence_noise_scale = 1.955

[node name="PlanetButton" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = -320.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_hmqgj")

[node name="ButtonName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -49.5
offset_right = 25.0
offset_bottom = -36.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "Text Here"
label_settings = SubResource("LabelSettings_8b8p6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Planet" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
pivot_offset = Vector2(32, 32)
texture_normal = ExtResource("1_ey4xq")

[node name="HoverGradient" type="Control" parent="Planet"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="HoverGradientVert" type="TextureRect" parent="Planet/HoverGradient"]
z_index = -2
layout_mode = 0
offset_left = 16.0
offset_top = -78.0
offset_right = 48.0
offset_bottom = 50.0
mouse_filter = 2
texture = SubResource("GradientTexture2D_3nfe5")

[node name="HoverGradientPlanet" type="TextureRect" parent="Planet/HoverGradient"]
z_index = -2
layout_mode = 0
offset_left = -16.0
offset_top = -16.0
offset_right = 80.0
offset_bottom = 80.0
pivot_offset = Vector2(48, 48)
mouse_filter = 2
texture = SubResource("GradientTexture2D_j6mg4")

[node name="Particles" type="GPUParticles2D" parent="Planet"]
z_index = -1
position = Vector2(32, 32)
emitting = false
process_material = SubResource("ParticleProcessMaterial_0pans")
texture = ExtResource("3_l1qtp")

[node name="HoverSound" type="AudioStreamPlayer2D" parent="Planet"]
stream = ExtResource("4_ig1ms")
pitch_scale = 2.45

[node name="Icon" type="TextureRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
pivot_offset = Vector2(32, 32)
mouse_filter = 2

[connection signal="mouse_entered" from="Planet" to="." method="_on_planet_mouse_entered"]
[connection signal="mouse_exited" from="Planet" to="." method="_on_planet_mouse_exited"]
[connection signal="pressed" from="Planet" to="." method="_on_planet_pressed"]
